--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,57 @@
-altair
-attrs
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-contourpy
-cycler
-et-xmlfile
-fonttools
-gitdb
-GitPython
-idna
-Jinja2
-joblib
-jsonschema
-jsonschema-specifications
-kiwisolver
-markdown-it-py
-MarkupSafe
-matplotlib
-mdurl
-numpy
-openpyxl
-packaging
-pandas
-pillow
-protobuf
-pyarrow
-pydeck
-Pygments
-pyparsing
-python-dateutil
-pytz
-referencing
-requests
-rich
-rpds-py
-scikit-learn
-scipy
-six
-smmap
-streamlit
-tenacity
-threadpoolctl
-toml
-toolz
-tornado
-typing_extensions
-tzdata
-urllib3
-watchdog
-xlsxwriter
+altair==5.4.1
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.3.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+et-xmlfile==1.1.0
+fonttools==4.54.1
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.4
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.18.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.9.2
+mdurl==0.1.2
+numpy==2.1.2
+openpyxl==3.1.2
+packaging==24.1
+pandas==2.2.3
+pillow==11.0.0
+protobuf==3.20.3
+pyarrow==12.0.1
+pydeck==0.8.0
+Pygments==2.16.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3
+referencing==0.35.1
+requests==2.31.0
+rich==13.10.0
+rpds-py==0.9.1
+scikit-learn==1.3.2
+scipy==1.11.3
+six==1.16.0
+smmap==5.0.0
+streamlit==1.15.2
+tenacity==8.2.2
+threadpoolctl==3.2.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+typing-extensions==4.7.1
+tzdata==2023.3
+tzlocal==4.3
+urllib3==2.0.5
+validators==0.20.0
+watchdog==3.0.0
+xlsxwriter==3.1.2
