--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ packaging==24.1
 pandas==2.2.3
 pillow==11.0.0
 protobuf==3.20.3
-pyarrow==12.0.1
+pyarrow==12.0.0  # تعديل هذا السطر
 pydeck==0.8.0
 Pygments==2.16.1
 pyparsing==3.1.1
@@ -48,7 +48,7 @@ threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.2
-typing-extensions==4.7.1
+typing-extensions>=4.10.0  # تعديل هذا السطر
 tzdata==2023.3
 tzlocal==4.3
 urllib3==2.0.5
