--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.4.1
+altair==5.4.1
 attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
@@ -28,7 +28,7 @@ openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
-protobuf==5.28.3
+protobuf==3.20.3  # ✅ الإصدار الصحيح
 pyarrow==18.0.0
 pydeck==0.9.1
 Pygments==2.18.0
@@ -54,5 +54,3 @@ tzdata==2024.2
 urllib3==2.2.3
 watchdog==5.0.3
 XlsxWriter==3.2.0
-protobuf==3.20.3
-
