--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
-protobuf==3.20.3  # ✅ الإصدار الصحيح
+protobuf==3.20.3  # ✅ الإصدار المتوافق مع Streamlit
 pyarrow==18.0.0
 pydeck==0.9.1
 Pygments==2.18.0
@@ -43,7 +43,7 @@ scikit-learn==1.5.2
 scipy==1.14.1
 six==1.16.0
 smmap==5.0.1
-streamlit==1.39.0
+streamlit==1.8.0  # ✅ تجنب الإصدارات الجديدة التي تسبب مشاكل
 tenacity==9.0.0
 threadpoolctl==3.5.0
 toml==0.10.2
